--- a/index.html
+++ b/index.html
@@ -32,5 +32,19 @@
         </div>
     </div>
 </nav>
+    <div class="container my-4 ">
+    <div class="row justify-content-center">
+        <div class="col-lg mb-lg-4">
+            <img src="image.jpg" class="img-fluid" alt="" srcset="">
+        </div>
+        <div class="col-lg mx-2 align-self-center">
+            <div class="my-3">
+                <h1 class="text-center">Esto es Rol x Valencia</h1>
+                <p>rol por valencia blablabla
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
