--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link" href="#">Programación</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Reading Log</a>
+                    <a class="nav-link" href="#">RxV</a>
                 </li>
             </ul>
         </div>
@@ -35,7 +35,7 @@
     <div class="container my-4 ">
     <div class="row justify-content-center">
         <div class="col-lg mb-lg-4">
-            <img src="image.jpg" class="img-fluid" alt="" srcset="">
+            <img src="https://storage.googleapis.com/py-web--as-py--pro--static/images/ventajas-vivir-en-valencia.width-1920.jpg" class="img-fluid" alt="" srcset="">
         </div>
         <div class="col-lg mx-2 align-self-center">
             <div class="my-3">
